[package]
name = "yawc"
version = "0.1.0"
edition = "2021"
authors = ["Dario <dario@infinitefieldtrading.com>"]
description = "Yet another websocket library. But a fast, secure WebSocket implementation with RFC 6455 compliance and compression support"
documentation = "https://docs.rs/yawc"
repository = "https://github.com/infinitefield/yawc"
license = "LGPL-3.0-or-later"
keywords = ["websocket", "websockets", "ws", "networking", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming",
    "web-programming::websocket",
]
readme = "README.md"
rust-version = "1.75.0"

# Package build settings
exclude = ["/.github/*", "/examples/*", "/tests/*", "/.gitignore"]
include = ["/src/**/*", "/Cargo.toml", "/README.md", "/LICENSE"]

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

# Optional feature configurations
[features]
default = []
zlib = ["flate2/any_zlib", "flate2/zlib-rs"]
logging = ["log"]
reqwest = ["dep:reqwest"]
axum = ["dep:axum-core", "dep:async-trait", "dep:http"]
json = ["dep:serde_json", "dep:serde"]

# Examples configuration
[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]

[[example]]
name = "axum_proxy"
path = "examples/axum_proxy/main.rs"
required-features = ["axum", "reqwest", "json"]

[dependencies]
# HTTP clients
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "logging",
    "tls12",
] }
reqwest = { version = "0.12", default-features = false, optional = true }

# HTTP servers (optional)
axum-core = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
http = { version = "1", optional = true }

# Async runtime and utilities
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Compression
flate2 = "1"

# Encoding and cryptography
base64 = "0.22"
sha1 = "0.10"

# json feature
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

# Utilities
bytes = "1"
http-body-util = "0.1"
nom = "7.1"
pin-project = "1"
rand = "0.8"
thiserror = "1"
url = "2"
log = { version = "0.4", optional = true }

[dev-dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
hyper = { version = "1.5.0", features = ["http1", "server", "client"] }
log = "0.4.22"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-webpki-roots",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5.0.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
webpki-roots = "0.26.6"
