[package]
name = "yawcc"
version = "0.1.2"
edition = "2021"
authors = ["Dario <dario@infinitefieldtrading.com>"]
description = "CLI tool using yawc"
repository = "https://github.com/infinitefield/yawc"
license = "LGPL-3.0-or-later"
keywords = ["websocket", "websockets", "ws", "networking", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming",
    "web-programming::websocket",
]
readme = "README.md"
rust-version = "1.75.0"

# [patch.crates-io]
# yawc = { path = ".." }

[workspace]

[dependencies]
yawc = "0.2"
rustyline = "14.0.0"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"
tokio = { version = "1.43.1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "signal",
] }
url = "2.5.3"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "ring",
    "logging",
    "tls12",
] }
home = "0.5.9"
humantime = "2.1.0"
serde_json = "1.0.132"
hyper-util = { version = "0.1.10", features = ["http1", "server"] }
hyper = { version = "1.6.0", features = ["http1", "server"] }
http-body-util = "0.1.2"
